// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shows a facets tab 1`] = `
<nav
  className="sc-AxjAm iPShpD secondaryNav"
>
  <ul
    className="sc-AxirZ bbptfx"
  >
    <li
      className="sc-AxgMl YTBVD"
    >
      <a
        className="sc-AxheI biWnwU"
        href="/r/foo"
        onClick={[Function]}
      >
        Logs
      </a>
    </li>
    <li
      className="sc-AxgMl YTBVD"
    >
      <a
        className="sc-AxheI biWnwU secondaryNavLink--alerts "
        href="/r/foo/alerts"
        onClick={[Function]}
      >
        Alerts
      </a>
    </li>
    <li
      className="sc-AxgMl YTBVD"
    >
      <a
        className="sc-AxheI biWnwU tabLink isSelected"
        href="/r/foo/facets"
        onClick={[Function]}
      >
        Facets
      </a>
    </li>
  </ul>
</nav>
`;

exports[`shows error pane 1`] = `
<nav
  className="sc-AxjAm iPShpD secondaryNav"
>
  <ul
    className="sc-AxirZ bbptfx"
  >
    <li
      className="sc-AxgMl YTBVD"
    >
      <a
        className="sc-AxheI biWnwU"
        href="/r/foo"
        onClick={[Function]}
      >
        Logs
      </a>
    </li>
    <li
      className="sc-AxgMl YTBVD"
    >
      <a
        className="sc-AxheI biWnwU secondaryNavLink--alerts isSelected"
        href="/r/foo/alerts"
        onClick={[Function]}
      >
        Alerts
      </a>
    </li>
  </ul>
</nav>
`;

exports[`shows logs 1`] = `
<nav
  className="sc-AxjAm iPShpD secondaryNav"
>
  <ul
    className="sc-AxirZ bbptfx"
  >
    <li
      className="sc-AxgMl YTBVD"
    >
      <a
        className="sc-AxheI biWnwU isSelected"
        href="/r/foo"
        onClick={[Function]}
      >
        Logs
      </a>
    </li>
    <li
      className="sc-AxgMl YTBVD"
    >
      <a
        className="sc-AxheI biWnwU secondaryNavLink--alerts "
        href="/r/foo/alerts"
        onClick={[Function]}
      >
        Alerts
      </a>
    </li>
  </ul>
</nav>
`;

exports[`shows the number of errors in the error tab 1`] = `
<nav
  className="sc-AxjAm iPShpD secondaryNav"
>
  <ul
    className="sc-AxirZ bbptfx"
  >
    <li
      className="sc-AxgMl YTBVD"
    >
      <a
        className="sc-AxheI biWnwU"
        href="/r/foo"
        onClick={[Function]}
      >
        Logs
      </a>
    </li>
    <li
      className="sc-AxgMl YTBVD"
    >
      <a
        className="sc-AxheI biWnwU secondaryNavLink--alerts isSelected"
        href="/r/foo/alerts"
        onClick={[Function]}
      >
        Alerts
        <div
          className="sc-Axmtr exxIYG"
        >
          27
        </div>
      </a>
    </li>
  </ul>
</nav>
`;
